Finished flix bonus for grid details

--- a/flix/Base.lproj/Main.storyboard
+++ b/flix/Base.lproj/Main.storyboard
@@ -127,6 +127,7 @@
                                         </view>
                                         <connections>
                                             <outlet property="posterView" destination="OTQ-5s-cys" id="lNO-QZ-ILZ"/>
+                                            <segue destination="kxU-3M-fVR" kind="show" id="II7-Dr-vyI"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -159,7 +160,7 @@
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oF3-I5-GqQ">
                                 <rect key="frame" x="0.0" y="64" width="375" height="154"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EAW-j5-Z7S">
                                 <rect key="frame" x="16" y="130" width="129" height="172"/>
@@ -193,6 +194,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VKP-eX-ivZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137" y="939"/>
+        </scene>
+        <!--Grid Details View Controller-->
+        <scene sceneID="a0z-O4-V5Q">
+            <objects>
+                <viewController id="kxU-3M-fVR" customClass="GridDetailsViewController" customModule="flix" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BJf-dq-PX9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="85y-wS-nOh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="151"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sz3-1G-c84">
+                                <rect key="frame" x="16" y="124" width="132" height="187"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mb8-jF-VkY">
+                                <rect key="frame" x="156" y="209" width="203" height="102"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6G-59-OsA">
+                                <rect key="frame" x="16" y="334" width="343" height="192"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="8Nr-al-IM8"/>
+                    </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="85y-wS-nOh" id="IKi-9M-dMS"/>
+                        <outlet property="detailsLabel" destination="l6G-59-OsA" id="x07-kC-y8R"/>
+                        <outlet property="posterImageView" destination="Sz3-1G-c84" id="18n-k3-d2a"/>
+                        <outlet property="titleLabel" destination="mb8-jF-VkY" id="aX0-DT-OT7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BoQ-No-6J5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1013.6" y="938.68065967016503"/>
         </scene>
         <!--Now Playing-->
         <scene sceneID="9cD-lR-eqK">
